--- a/FrontEnd/termi-project/src/components/style.css
+++ b/FrontEnd/termi-project/src/components/style.css
@@ -626,6 +626,13 @@ header .mobile_menu nav ul li a.active:after {
     padding-bottom: 8vh;
     background-position: bottom center;
 }
+.banner.banner_trending{
+    background-image: url(../assets/images/trending_back.jpg);
+    min-width: auto;
+    min-height: auto;
+    padding-bottom: 8vh;
+    background-position: bottom center;
+}
 /*new note */
 .banner.banner_note{
     background-image: url(../assets/images/SVGBackground/suggest-banner.svg);
