--- a/FrontEnd/termi-project/src/games/memory-game/MemoryGame.css
+++ b/FrontEnd/termi-project/src/games/memory-game/MemoryGame.css
@@ -11,29 +11,23 @@
 .memory-card{
     background-color: transparent;
     width: 100%;
-    /*width: 200px;*/
-    /*height: 300px;*/
-    perspective: 1000px;
-    
+    /*perspective: 1000px;*/
     border-radius: .25rem;
     box-shadow: 0 0 5px 2px rgba(0, 0, 0, .3);
-    /*background-color: white;*/
     transform-style: preserve-3d;
-    transition: 150ms;
-    /*cursor: pointer;*/
+    /*transition: 150ms;*/
 }
 
-.memory-card-inner{
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.5s;
-    transform-style: preserve-3d;
-    /*background-color: white;*/
-    
-    border-radius: .25rem;
-}
+
+/*.memory-card-inner{*/
+/*    position: relative;*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    text-align: center;*/
+/*    transition: transform 0.5s;*/
+/*    transform-style: preserve-3d;*/
+/*    border-radius: .25rem;*/
+/*}*/
 
 .disabled-memory-card{
     pointer-events:none;
@@ -53,17 +47,14 @@
     -ms-user-select: none;
     -moz-user-select: none;
     user-select: none;
-    backface-visibility: hidden;
-    
     transform-style: preserve-3d;
-    transition: 150ms;
+    /*transition: 150ms;*/
     cursor: pointer;
 }
 
 .memory-card .front{
     pointer-events:none;
     background-color: white;
-    
 }
 
 .memory-card:hover{
