--- a/FrontEnd/termi-project/src/styles/TermsPage.css
+++ b/FrontEnd/termi-project/src/styles/TermsPage.css
@@ -7,6 +7,9 @@
     width: 100%;
     border-radius: 50px;
     box-shadow: 0 5px 10px rgba(0, 0 ,0, 0.3);
+     display: flex;
+  align-items: center;
+  
 }
 
 .search-input{
@@ -16,7 +19,7 @@
     font-size: 20px;
     font-weight: 400;
     border: none;
-    padding: 0 55px 0 30px;
+    padding: 0 105px 0 30px;
     background-color: transparent;
 }
 
@@ -24,27 +27,47 @@
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    right: 10px;
+    right: 50px;
+    font-size: 25px;
+    color: #707070;
+    cursor: pointer;
+    border-radius: 50%;
+      margin-left: 10px; /* Adjust the margin-left value as needed */
+    padding: 10px;
+}
+.microphone-button{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 0px;
     font-size: 25px;
     color: #707070;
     cursor: pointer;
     border-radius: 50%;
     padding: 10px;
+     outline: none;
 }
 
+
+.microphone-button:hover{
+     background-color: #62329e;
+    color: white;
+}
 .search-button:hover{
     background-color: #62329e;
     color: white;
 }
 
+
 .autocomplete-box{
     position: absolute;
     width:100%;
-    margin-top: 15px;
+    top: 100%;
+    margin-top: 10px;
     border-radius: 10px;
     background-color: #f4f4f4;
     border: 1px solid gray;
-    z-index: 50;
+    z-index: 1;
 }
 
 .autocomplete-item{
