--- a/FrontEnd/termi-project/src/pages/AdminPage/Admin.css
+++ b/FrontEnd/termi-project/src/pages/AdminPage/Admin.css
@@ -101,3 +101,20 @@ font-size: 20px;
     background-color: #f0ebdf;
 }
 
+.admin-top10-chart{
+    height: 480px;
+    width: 100%;
+    background: #FFFFFF;
+    border: none;
+    border-radius: 2px;
+    box-shadow: 0 2px 10px 0 rgba(70, 76, 79, .2);
+}
+
+.admin-most-played-game-chart{
+    height: 480px;
+    width: 100%;
+    background: #FFFFFF;
+    border: none;
+    border-radius: 2px;
+    box-shadow: 0 2px 10px 0 rgba(70, 76, 79, .2); 
+}
