--- a/FrontEnd/termi-project/src/games/memory-game/MemoryGame.css
+++ b/FrontEnd/termi-project/src/games/memory-game/MemoryGame.css
@@ -47,7 +47,7 @@
     -ms-user-select: none;
     -moz-user-select: none;
     user-select: none;
-    /*transform-style: preserve-3d;*/
+    transform-style: preserve-3d;
     /*transition: 150ms;*/
     cursor: pointer;
 }
